k8s/istio-ingress-sidecar/admingui.service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-gui
  namespace: admin-app
spec:
  type: ClusterIP
  selector:
    app: admin-gui
  ports:
  - name: http
    port: 80
    targetPort: 80
