k8s/istio-ingress-sidecar/userservice.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: admin-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: userservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
