k8s/istio-ingress-sidecar/userservice.service.yml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: admin-app
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: http
    port: 8080
    targetPort: 8080
